--- a/Frontend - Organi/assets/css/pages/about/about.css
+++ b/Frontend - Organi/assets/css/pages/about/about.css
@@ -212,7 +212,6 @@
 
 #header .middle-side {
    background-image: linear-gradient(45deg, #f1eeee, #ffffff);
-   border-top: 1px solid #d9d9d9;
    height: 200px;
 }
 
@@ -591,6 +590,7 @@
    width: 100%;
    height: 340px;
    padding-top: 25px;
+   filter: brightness(0.9);
 }
 
 #banner .banner h1 {
