--- a/Frontend - Organi/assets/css/pages/blog/blog.css
+++ b/Frontend - Organi/assets/css/pages/blog/blog.css
@@ -206,7 +206,6 @@
 
 #header .middle-side {
    background-image: linear-gradient(45deg, #f1eeee, #ffffff);
-   border-top: 1px solid #d9d9d9;
    height: 200px;
 }
 
@@ -585,6 +584,7 @@
    width: 100%;
    height: 340px;
    padding-top: 25px;
+   filter: brightness(0.9);
 }
 
 #banner .banner h1 {
@@ -703,12 +703,16 @@
    transition: transform 0.4s;
 }
 
-#blog .left-side .blog .blog-image img:hover {
+#blog .left-side .blog .blog-image:hover img {
    cursor: pointer;
    transform: scale(1.2);
 }
 
-#blog .left-side .blog .blog-image:hover+.blog-content {
+#blog .left-side .blog .blog-image:hover + .blog-content .text {
+   color: green;
+}
+
+#blog .left-side .blog .blog-image:hover + .blog-content p {
    color: green;
 }
 
@@ -743,6 +747,7 @@
 #blog .left-side .blog .blog-content .blog-description p {
    font-size: 20px;
    font-style: italic;
+   color: #464242;
 }
 
 #blog .pagination {
@@ -788,14 +793,18 @@
    outline: none;
    width: 100%;
    height: 40px;
-   border-radius: 10px;
-   padding-left: 10px;
-   border: 2px solid #a9a9a9;
+   border-radius: 15px;
+   padding-left: 15px;
+   border: none;
+   border: 1px solid #878787;
    font-size: 16px;
    font-style: italic;
    color: gray;
    letter-spacing: 1px;
-   border: none;
+}
+
+#blog .right-side .search input:focus {
+   border: 1px solid #166824;
 }
 
 #blog .right-side .search button {
@@ -808,10 +817,6 @@
 
 #blog .right-side .search button:hover {
    background-color: #106a10;
-}
-
-#blog .right-side .search input:focus {
-   border: 2px solid #166824;
 }
 
 #blog .right-side .blog-items {
