--- a/Frontend - Organi/assets/css/pages/shop/shop.css
+++ b/Frontend - Organi/assets/css/pages/shop/shop.css
@@ -212,7 +212,6 @@
 
 #header .middle-side {
    background-image: linear-gradient(45deg, #f1eeee, #ffffff);
-   border-top: 1px solid #d9d9d9;
    height: 200px;
 }
 
@@ -591,6 +590,7 @@
    width: 100%;
    height: 340px;
    padding-top: 25px;
+   filter: brightness(0.9);
 }
 
 #banner .banner h1 {
@@ -677,7 +677,7 @@
    border-radius: 18px;
    border: 2px solid black;
    animation: border-animation 0.4s infinite;
-   background: #e1e1e1;
+   background: #cbffcb;
 }
 
 #filtering .left-side .filter h5 {
@@ -691,9 +691,9 @@
    outline: none;
    width: 180px;
    height: 40px;
-   border-radius: 10px;
-   padding-left: 10px;
-   border: 2px solid #a9a9a9;
+   border-radius: 20px;
+   padding-left: 15px;
+   border: 1px solid #b3b3b3;
    font-size: 16px;
    font-style: italic;
    color: gray;
@@ -782,7 +782,7 @@
 }
 
 #filtering .left-side .filter ul li svg {
-   color: white;
+   color: #cbc9c9;
 }
 
 #filtering .left-side .filter ul li svg:hover {
@@ -962,17 +962,9 @@
    text-align: center;
 }
 
-#filtering .products .tab-content .product-content:hover {
-   color: rgb(3 139 3);
-}
-
-
-#filtering .products .tab-content .product-content .product-rating {
-   font-size: 13px;
-}
-
 #filtering .products .tab-content .product-content .product-rating svg {
    color: #c5c2c2;
+   font-size: 13px;
 }
 
 #filtering .products .tab-content .product-content .product-rating .active {
@@ -1001,7 +993,12 @@
 }
 
 #filtering .products .tab-content .product-content .product-price .discount {
-   text-decoration: 2px line-through;
+   text-decoration: 2px line-through red;
+   color: red;
+}
+
+#filtering .products .tab-content .product-content .product-price span:nth-child(2) {
+   color: green;
 }
 
 #filtering .products .tab-content .product-content .product-add-to-cart {
