--- a/Frontend - Organi/assets/css/pages/contact/contact.css
+++ b/Frontend - Organi/assets/css/pages/contact/contact.css
@@ -27,154 +27,154 @@
 /* ANIMATIONS-START */
 @keyframes blink {
    50% {
-      color: rgb(0, 194, 0)
+       color: rgb(0, 194, 0)
    }
 }
 
 @keyframes blink-facebook {
    50% {
-      color: rgb(17, 0, 255);
+       color: rgb(17, 0, 255);
    }
 }
 
 @keyframes blink-twitter {
    50% {
-      color: rgb(0, 247, 255);
+       color: rgb(0, 247, 255);
    }
 }
 
 @keyframes blink-instagram {
    50% {
-      color: rgb(200, 14, 224);
+       color: rgb(200, 14, 224);
    }
 }
 
 @keyframes blink-linked-in {
    50% {
-      color: rgb(28, 20, 148);
+       color: rgb(28, 20, 148);
    }
 }
 
 @keyframes blink-pinterest {
    50% {
-      color: rgb(211, 101, 119)
+       color: rgb(211, 101, 119)
    }
 }
 
 @keyframes blink-youtube {
    50% {
-      color: rgb(255, 0, 0)
+       color: rgb(255, 0, 0)
    }
 }
 
 @keyframes blink-google {
    50% {
-      color: rgb(255, 123, 0)
+       color: rgb(255, 123, 0)
    }
 }
 
 @keyframes blink-menu {
    50% {
-      color: white;
+       color: white;
    }
 }
 
 @keyframes text {
 
    from {
-      left: 120px;
+       left: 120px;
    }
 
    to {
-      left: 0;
+       left: 0;
    }
 }
 
 @keyframes info {
 
    from {
-      top: 100px;
+       top: 100px;
    }
 
    to {
-      top: 0;
+       top: 0;
    }
 }
 
 @keyframes animation-text-on-image1 {
 
    from {
-      top: 500px;
+       top: 500px;
    }
 
    to {
-      top: 133px
+       top: 133px
    }
 }
 
 @keyframes animation-text-on-image2 {
 
    from {
-      top: 500px;
+       top: 500px;
    }
 
    to {
-      top: 150px
+       top: 150px
    }
 }
 
 @keyframes glide1 {
    from {
-      top: 100px;
-      left: 0;
+       top: 100px;
+       left: 0;
    }
 
    to {
-      top: 140px;
-      left: 0;
+       top: 140px;
+       left: 0;
    }
 }
 
 @keyframes glide2 {
    from {
-      top: 50px;
-      right: 0;
+       top: 50px;
+       right: 0;
 
    }
 
    to {
-      top: 0;
-      right: 0;
+       top: 0;
+       right: 0;
    }
 }
 
 @keyframes text-effect {
    10% {
-      opacity: 0.5;
+       opacity: 0.5;
    }
 
    20% {
-      opacity: 1;
+       opacity: 1;
    }
 
    80% {
-      opacity: 1;
-      top: 0;
+       opacity: 1;
+       top: 0;
    }
 
    90% {
-      opacity: 0.5;
+       opacity: 0.5;
    }
 
    100% {
-      opacity: 0;
-      top: 100px;
+       opacity: 0;
+       top: 100px;
    }
 }
 
 @keyframes border-animation {
    50% {
-      border-color: rgb(9, 223, 9);
+       border-color: rgb(9, 223, 9);
    }
 }
 
@@ -234,6 +234,8 @@
 
 #header .middle-side {
    background-image: linear-gradient(45deg, #f1eeee, #ffffff);
+   background-repeat: no-repeat;
+   background-size: cover;
    height: 200px;
 }
 
@@ -272,17 +274,22 @@
 #header .middle-side .account:hover {
    color: #186618;
    cursor: pointer;
-   font-weight: 500;
 }
 
 #header .middle-side .account .login {
    margin-top: 6px;
-   font-size: 17px;
+   font-size: 16px;
    text-decoration: none;
    color: #186618;
+   font-weight: 500;
 }
 
-#header .middle-side .account img {
+#header .middle-side .account .image {
+   width: 40px;
+   height: 40px;
+}
+
+#header .middle-side .account .image img {
    width: 100%;
    height: 100%;
    border-radius: 50%;
@@ -855,6 +862,8 @@
    color: gray;
    padding-left: 35px;
    font-size: 15px;
+   background: #f9f9f9;
+   letter-spacing: 1px;
 }
 
 #contact .right-side .contact-message .upper-side input::placeholder {
@@ -878,6 +887,8 @@
    color: gray;
    resize: none;
    padding: 10px 35px;
+   background: #f9f9f9;
+   letter-spacing: 1px;
 }
 
 #contact .right-side .contact-message .down-side textarea:focus {
