--- a/Frontend - Organi/assets/css/pages/login/login.css
+++ b/Frontend - Organi/assets/css/pages/login/login.css
@@ -20,11 +20,6 @@
     src: url(../../../fonts/Poppins//Poppins-ExtraLightItalic.ttf);
 }
 
-@font-face {
-    font-family: Poppins-Regular;
-    src: url(../../../fonts/Poppins/Poppins-Regular.ttf)
-}
-
 /* FONTS-END */
 
 /*--------------------------------------------------------------------*/
@@ -487,9 +482,9 @@
     display: flex;
     list-style-type: none;
     margin: 0;
-    gap: 9%;
+    gap: 75px;
     padding: 0;
-    margin-left: 15%;
+    margin-left: 80px;
 }
 
 #header .down-side .menu ul li {
@@ -520,50 +515,53 @@
     color: green
 }
 
-#header .down-side .account {
-    position: relative;
-    z-index: 1;
+#header .down-side .drop-down {
+    width: 60px;
 }
 
-#header .down-side .account-title {
-    display: inline-block;
+#header .down-side .drop-down-menu {
+    position: relative;
+    z-index: 1;
+    height: 0;
+    transition: height 0.5s;
+    background-color: white;
+    width: 215px;
+}
+
+#header .down-side .drop-down-menu li {
+    display: none;
+}
+
+#header .down-side .drop-down-title {
     padding-bottom: 32px;
 }
 
-#header .down-side .account-title:hover {
+#header .down-side .drop-down-title:hover {
     cursor: pointer;
 }
 
-#header .down-side .account-title:hover+.account-menu {
-    visibility: visible;
-    height: 132px;
+#header .down-side .drop-down-title:hover+.drop-down-menu {
+    height: 119px;
 }
 
-#header .down-side .account-menu {
-    visibility: hidden;
-    height: 0;
-    transition: height 1s;
-    background-color: white;
+#header .down-side .drop-down-title:hover+.drop-down-menu li {
+    display: block;
 }
 
-#header .down-side .account-menu:hover {
-    visibility: visible;
-    height: 132px;
+#header .down-side .drop-down-menu:hover {
+    height: 119px;
 }
 
-
-#header .down-side .account-menu .line {
-    display: inline-block;
-    width: max-content;
-    height: 0;
+#header .down-side .drop-down-menu:hover li {
+    display: block;
 }
 
-#header .down-side .account-menu li {
-    padding: 10px 20px;
+#header .down-side .drop-down-menu li {
+    padding: 7px 20px;
+    width: 215px
 }
 
-
-#header .down-side .account-menu li:hover {
+#header .down-side .drop-down-menu li:hover {
     background-image: linear-gradient(45deg, #cfcfcf, #ffffff);
 }
 
@@ -641,6 +639,265 @@
     font-size: 25px;
     margin-top: 10px;
     color: #6ed76e;
+}
+
+#login {
+    background-image: linear-gradient(to bottom, #e3fded, #e2fde5);
+}
+
+#login .login {
+    display: flex;
+    border: 2px solid green;
+    width: max-content;
+    border-radius: 50px;
+    margin: 0 auto;
+    background: white;
+}
+
+#login .login-image {
+    width: 595px;
+    height: 800px;
+    border-top-left-radius: 200px;
+    border-bottom-left-radius: 200px;
+    overflow: hidden;
+}
+
+#login .login-image img {
+    width: 100%;
+    height: 100%;
+    filter: brightness(0.8);
+    transition: all 0.4s;
+    border-top-left-radius: inherit;
+    border-bottom-left-radius: inherit;
+}
+
+#login .login-image img:hover {
+    filter: brightness(1);
+    cursor: pointer;
+    transform: scale(1.2);
+}
+
+#login .login-content {
+    font-family: serif;
+    border-radius: inherit;
+    padding: 0 55px;
+}
+
+#login .login-content form {
+    margin-left: 30px;
+    margin-top: 40px;
+}
+
+#login .login-title {
+    margin-right: 12px;
+    margin-top: 20px;
+}
+
+#login .login-title h1 {
+    font-size: 50px;
+    text-align: center;
+    font-weight: bolder;
+    color: green;
+    font-style: italic;
+}
+
+#login .input {
+    margin-bottom: 20px;
+    position: relative;
+}
+
+#login .input label {
+    font-size: 18px;
+    font-weight: 600;
+    color: green;
+    margin-bottom: 10px;
+}
+
+#login .input input {
+    outline: none;
+    width: 95%;
+    height: 45px;
+    border-radius: 20px;
+    padding-left: 15px;
+    border: 1px solid #d1d1d1;
+    color: rgb(54, 48, 48);
+    background: #f9f9f9;
+    letter-spacing: 1px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+#login .input svg {
+    position: absolute;
+    right: 45px;
+    top: 50px;
+    font-size: 18px;
+    color: #5a5a5a;
+    z-index: 1;
+}
+
+#login .input svg:hover {
+    cursor: pointer;
+}
+
+#login .input .line {
+    position: absolute;
+    width: 24px;
+    height: 2px;
+    background-color: #5a5a5a;
+    right: 43px;
+    top: 58px;
+    transform: rotate(30deg);
+}
+
+#login .input input:focus {
+    border-color: green;
+}
+
+#login .input input::placeholder {
+    color: rgb(59, 57, 57);
+    font-size: 16px;
+    letter-spacing: 1px;
+    font-style: italic;
+}
+
+#login .forgot-password-remember-me {
+    display: flex;
+    justify-content: space-between;
+    width: 90%;
+}
+
+#login .remember-me:hover {
+    cursor: pointer;
+}
+
+#login .remember-me:hover input,
+label {
+    cursor: pointer;
+}
+
+#login .remember-me input {
+    background-color: green;
+    border: none;
+    box-shadow: none;
+}
+
+#login .remember-me input:checked {
+    box-shadow: 0 0 10px green;
+}
+
+#login .remember-me label {
+    color: green;
+    margin-left: 5px;
+}
+
+#login .forgot-password a {
+    text-decoration: none;
+    color: green;
+}
+
+#login .login-btn {
+    margin-left: 5px;
+}
+
+#login .login-btn button {
+    width: 95%;
+    height: 44px;
+    border-radius: 30px;
+    padding: 0;
+    background-color: #1e811a;
+    font-size: 24px;
+}
+
+#login .login-btn button:hover {
+    background-color: rgb(26, 95, 26);
+}
+
+#login .horizontal-line-or {
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
+}
+
+#login .horizontal-line {
+    width: 50%;
+    height: 1px;
+    background-color: #21c921;
+    margin-top: 17px;
+}
+
+#login .or {
+    margin: 0 15px;
+}
+
+#login .or span {
+    color: #21c921;
+    font-size: 20px;
+}
+
+#login .social-medias {
+    margin-top: 20px;
+    font-style: italic;
+}
+
+#login .social-medias a {
+    border-radius: 10px;
+    padding: 10px 88px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    width: 390px;
+    margin: 25px auto;
+    cursor: pointer;
+    text-decoration: none;
+    color: white;
+    font-size: 19px;
+    letter-spacing: 0.3px;
+    display: block;
+}
+
+#login .social-medias a svg {
+    animation: none;
+    color: white;
+    width: 16px;
+    height: 16px;
+    margin-right: 15px;
+}
+
+#login .social-medias .facebook {
+    background-image: linear-gradient(45deg, #1267d5, #1b7da7);
+}
+
+#login .social-medias .facebook:hover {
+    background-image: linear-gradient(45deg, #294d7c, #18536c)
+}
+
+#login .social-medias .google {
+    background-image: linear-gradient(45deg, #d91b1b, #e92323);
+}
+
+#login .social-medias .google:hover {
+    background-image: linear-gradient(45deg, #ad2525, #a93333);
+}
+
+#login .social-medias .instagram {
+    background-image: linear-gradient(45deg, #ed9d06, #f38201);
+}
+
+#login .social-medias .instagram:hover {
+    background-image: linear-gradient(45deg, #c78710, #d9882c);
+}
+
+#login .dont-have-account {
+    text-align: center;
+    margin-top: 30px;
+}
+
+#login .dont-have-account p {
+    color: rgb(40 40 40);
+    font-size: 18px;
+}
+
+#login .dont-have-account p a {
+    color: green;
+    text-decoration: underline;
 }
 
 
