--- a/Frontend - Organi/assets/css/pages/home/home.css
+++ b/Frontend - Organi/assets/css/pages/home/home.css
@@ -519,6 +519,10 @@
    width: 60px;
 }
 
+#header .down-side .drop-down.drop {
+   width: 85px;
+}
+
 #header .down-side .drop-down-menu {
    position: relative;
    z-index: 1;
@@ -533,7 +537,17 @@
 }
 
 #header .down-side .drop-down-title {
+   position: relative;
    padding-bottom: 32px;
+}
+
+#header .down-side .drop-down svg{
+   position: absolute;
+   top: 4px;
+   right: -22px;
+   font-size: 13px;
+   padding-bottom: 32px;
+   padding-left: 10px;
 }
 
 #header .down-side .drop-down-title:hover {
